@@ -1052,7 +1052,6 @@ function add_wishlist_discount_sort() {
 	}
 
 	$("#es_wl_sort_discount").on("click", function() {
-		$(".es_lowest_price").remove();	
 		var wishlistRows = [];
 		$('.wishlistRow').each(function () {
 			var push = new Array();
@@ -1230,8 +1229,8 @@ function add_wishlist_pricehistory() {
 			}
 
 			function get_price_data(lookup_type, node, id) {
-				html = "<div class='es_lowest_price' id='es_price_" + id + "'><div class='gift_icon' id='es_line_chart_" + id + "'><img src='" + chrome.extension.getURL("img/line_chart.png") + "'></div><span id='es_price_loading_" + id + "'>" + localized_strings.loading + "</span>";
-				$(node).before(html);
+				html = "<div class='es_lowest_price' id='es_price_" + id + "' style='margin-bottom: 5px;'><div class='gift_icon' id='es_line_chart_" + id + "'><img src='" + chrome.extension.getURL("img/line_chart.png") + "'></div><span id='es_price_loading_" + id + "'>" + localized_strings.loading + "</span>";
+				$(node).prepend(html);
 
 				get_http("//api.enhancedsteam.com/pricev2/?search=" + lookup_type + "/" + id + "&stores=" + storestring + "&cc=" + cc + "&coupon=" + settings.showlowestpricecoupon, function (txt) {
 					var data = JSON.parse(txt);
